Fix: Dark mode issues and API suggestions

--- a/gifos-app/src/components/main/Main.scss
+++ b/gifos-app/src/components/main/Main.scss
@@ -55,4 +55,8 @@
 
 .dark-mode-main {
     background: $black;
+
+    h3 {
+        color: $turquoise;
+    }
 }
