--- a/gifos-app/src/index.scss
+++ b/gifos-app/src/index.scss
@@ -2,6 +2,7 @@ $regular-violet: #572EE5;
 $violet-button: #6809E1;
 $white: #ffffff;
 $black: #121212;
+$turquoise: #40e0d0;
 
 $border-radius: 61px;
 
@@ -25,7 +26,7 @@ $border-radius: 61px;
   height: 100vh;
   margin: auto;
   background-color: $black;
-  transition: all 0.3s;
+  transition: all 0.32s;
 }
 
 body {
